--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="infoheader_active_zone_time">Active Zone minutes:</string>
 
 
+    <!-- Speakable text -->
+    <string name="description_fitness_nav_button1">Navigate to Instruction tab</string>
+    <string name="description_fitness_nav_button2">Navigate to Fitness Home Screen</string>
+    <string name="description_fitness_nav_button3">Navigate to Add/Search Users</string>
+    <string name="description_fitness_nav_button4">Navigate to Group Finder</string>
+
     <!-- Delete this as soon as we get the chance -->
     <string name="action_settings">Settings</string>
      Strings used for fragments for navigation
