--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="infoheader_worked_on">What you worked on</string>
     <string name="infoheader_calories_burned">Calories burned:</string>
     <string name="infoheader_time_spent_total">Time spent exercising:</string>
-    <string name="infoheader_active_zone_time">Active Zone minutes:</string>
 
 
     <!-- Speakable text -->
@@ -20,6 +19,11 @@
     <string name="description_fitness_nav_button2">Navigate to Fitness Home Screen</string>
     <string name="description_fitness_nav_button3">Navigate to Add/Search Users</string>
     <string name="description_fitness_nav_button4">Navigate to Group Finder</string>
+
+    <!-- Presentation text -->
+    <string name="presentation_calories_burned">356 KCals!</string>
+    <string name="presentation_worked_on">arms\nleg\ntorso</string>
+    <string name="presentation_time_spent">1 hour\n45 minutes!</string>
 
     <!-- Delete this as soon as we get the chance -->
     <string name="action_settings">Settings</string>
