Added some more descriptions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
 
     <!-- Speakable text -->
+    <string name="description_user_avatar_icon">Your avatar icon</string>
     <string name="description_fitness_nav_button1">Navigate to Instruction tab</string>
     <string name="description_fitness_nav_button2">Navigate to Fitness Home Screen</string>
     <string name="description_fitness_nav_button3">Navigate to Add/Search Users</string>
