--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,7 @@
     <string name="login_button">Submit</string>
     <string name="sign_up_link">"Don't have an account? Sign Up"</string>
 
-
+    <!-- Fragment labels -->
+    <string name="Home_fragment_label">HomeFragment</string>
+    <string name="Login_fragment_label">LogInFragment</string>
 </resources>
