--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <!-- Fragment labels -->
     <string name="Home_fragment_label">HomeFragment</string>
     <string name="Login_fragment_label">LogInFragment</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
