--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,14 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
     <!-- Settings Text -->
-    <string name="private_profile">Private Profile</string>
+    <string name="change_username">Change Username</string>
+    <string name="change_password">Change Password</string>
+    <string name="blocked_users">Blocked Users</string>
     <string name="log_out">Log Out</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Change Username Text -->
+    <string name="change_your_username">Change Your Username</string>
+    <string name="save">Save</string>
 </resources>
