--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,10 +86,25 @@
     <string name="change_password">Change Password</string>
     <string name="blocked_users">Blocked Users</string>
     <string name="log_out">Log Out</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Change Username Text -->
     <string name="change_your_username">Change Your Username</string>
     <string name="save">Save</string>
+
+    <!-- Profile Fragment Text -->
+    <string name="edit_profile">Edit Profile</string>
+    <string name="bio_text">This is the user bio. Here you can write about yourself.</string>
+    <string name="profile_image_description">Profile Picture</string>
+    <string name="username">Username</string>
+    <string name="height_label">Height</string>
+    <string name="height_value">Value</string>
+    <string name="weight_label">Weight</string>
+    <string name="weight_value">Value</string>
+    <string name="sex_label">Gender</string>
+    <string name="sex_value">Value</string>
+    <string name="calorie_goal">Calorie Goal</string>
+    <string name="calorie_value">Value</string>
 </resources>
