--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,7 @@
     <string name="sex_value">Value</string>
     <string name="calorie_goal">Calorie Goal</string>
     <string name="calorie_value">Value</string>
+
+    <!-- Friend Profile Text -->
+    <string name="username_placeholder">Username</string>
 </resources>
