Fixed some sizing issues with the goal assessment graphic, fixed some IDs, and one content description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="description_clock_placeholder">Clock placeholder graphic</string>
     <string name="description_emoji_placeholder">Clock placeholder graphic</string>
     <string name="description_user_avatar_icon">User avatar icon</string>
+    <string name="description_goal_assessment_icon">Graphic showing how well the user is doing</string>
 
 
     <!-- Presentation text -->
